# SimSys_Scripts

./: .gitignore  CONTRIBUTING.md  LICENCE  README.md  fcm_bdiff.py  forking_styling.py  get_git_sources.py  git_bdiff.py  install  install-vnev.sh  lfric_styling.py  pyproject.toml  python_umdp3_check_trunk.out  requirements.txt  rose_stem_extract_source.py  script_updater.sh  styling.py  styling_keywords.py  suite_report.py  temp.txt  test.txt
.github/: CODEOWNERS  pull_request_template.md
.github/linters/: .isort.cfg  .perlcriticrc  .python-black  .python-lint  .ruff.toml  .yaml-lint.yml
.github/workflows/: lint.yml  python_unit_tests.yaml
bdiff/: git_bdiff.py
bdiff/tests/: test_git_bdiff.py
fcm_bdiff/: __init__.py  fcm_bdiff.py
fortitude_linter/: fortitude_launcher.py
gh_review_project/: cr_deadline.py  finish_milestone.py  review_project.py  set_milestone.py  workload.py
gh_review_project/test/: issue.json  pr.json  ssdteam.json  test.json
git-migration/: README.md  config.json  gh_create_ss_labels  gh_manage_ss_labels  ssd_psvn2git.sh  ssd_svn2git.sh
github_extraction/: get_git_sources.py  rose_stem_extract_source.py
github_scripts/: get_git_sources.py  git_bdiff.py  merge_sources.py  rose_stem_extract_source.py  suite_data.py  suite_report_git.py
github_scripts/tests/: test_get_git_sources.py  test_git_bdiff.py
kgo_updates/: meto_update_kgo.sh
kgo_updates/kgo_update/: jules_kgo_update.sh  kgo_update.py  meto_run_kgo_script.sh
lfric_macros/: apply_macros.py  check_macro_chains.py  check_missing_macro.py  create_nml_file.py  release_lfric.py  test.py  upgrade_macros_checks.py  validate_rose_meta.py
lfric_macros/files/: template_versions.py
lfric_macros/tests/: test_apply_macros.py
lfric_styling/: lfric_styling.py  styling_keywords.py
nightly_testing/: example_meto_configs.yaml  generate_nightly_cron.py  generate_test-suite_cron.py  generate_test_suite_cron.py  generate_test_suite_cron_fcm.py  retrigger_nightlies.py  submit_meto_rose-stem.sh  test_generate_test_suite_cron.py
nightly_testing/tests/: test_generate_test_suite_cron.py
physics_forking_scripts/: forking_styling.py
sbin/: gh_add_user  gh_manage_labels  gh_manage_milestones  tagman
script_copyright_checker/file/: COSP.template  COSP_ll.template  COSP_ll2.template  COSP_ll3.template  COSP_ll4.template  COSP_mo.template  COSP_mo2.template  COSP_mo3.template  California.template  California2.template  California3.template  Colorado.regex_template  Colorado.template  Colorado2.template  Colorado3.template  Colorado4.template  Colorado5.template  JULES.template  JULES_CEH.template  JULES_california.template  Recherche_Scientifique.template  Recherche_Scientifique2.template  bath.template  (+60 more)
script_umdp3_checker/: checker_dispatch_tables.py  fortran_keywords.py  old_umdp3_checks.py  perl_umdp3_check.err  perl_umdp3_check_trunk.out  python_umdp3_check.out  python_umdp3_check_mkII.out  search_lists.py  temp_output.txt  umdp3.py  umdp3_checker_rules.py  umdp3_conformance.py  umdp3_rules_S3.py
suite_report_git/: suite_data.py  suite_report_git.py
tests/: test_fcm_bdiff.py  workload.py
umdp3_fixer/: ampersands.py  fstring_parse.py  indentation.py  rosestem_branch_checker.py  styling.py  umdp3_fixer.py  whitespace.py
workload/: core-capability-development.json  ssdteam.json  test.json  toolscollabdev.json  workload.py
(+39 files in other folders)
